Added njk support to smart kit

--- a/src/pages/blocks/_metadata.njk
+++ b/src/pages/blocks/_metadata.njk
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+{% block metadata %}
+  {# Meta-data #}
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta charset="utf-8">
   <meta name="viewport"
         content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
+  {# Links #}
   <link rel="manifest" href="/manifest.json">
   <link rel="shortcut icon" href="/favicon.ico">
-  <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-<body>
-<main class="container">
-  <div class="container-inner">
-    Some text here
-  </div>
-  <!-- /.container-inner -->
-</main>
-<!-- /.container -->
-</body>
-</html>
+  <title>{{ pageTitle }}</title>
+{% endblock %}
