Multi theme support update

--- a/src/pages/partials/_main-scripts.njk
+++ b/src/pages/partials/_main-scripts.njk
@@ -1,2 +1,2 @@
-<script type="text/javascript" src="/js/polyfills.js"></script>
-<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/static/js/vendor.js"></script>
+<script type="text/javascript" src="/static/js/main.js"></script>
