--- a/src/pages/partials/_main-styles.njk
+++ b/src/pages/partials/_main-styles.njk
@@ -1,3 +1,3 @@
 {% if PROD %}
-  <link href="/css/main.{{ THEME }}.css" rel="stylesheet">
+  <link href="static/css/main.{{ THEME }}.css" rel="stylesheet">
 {% endif %}
