Updated configs & settings

--- a/src/components/my-first-component/my-first-component.scss
+++ b/src/components/my-first-component/my-first-component.scss
@@ -6,4 +6,9 @@
   padding: 20px;
   color: $light-black;
   background: $white;
+
+  @light {
+    color: $white;
+    background: $light-black;
+  }
 }
