--- a/src/pages/partials/_main-scripts.njk
+++ b/src/pages/partials/_main-scripts.njk
@@ -1,1 +1,2 @@
+<script type="text/javascript" src="/static/js/vendor.chunk.js"></script>
 <script type="text/javascript" src="/static/js/main.js"></script>
